CustomDragLayer component for enabling Drag & Drop ghost row

--- a/src/components/configurable-items/configurable-item-row/configurable-item-row.scss
+++ b/src/components/configurable-items/configurable-item-row/configurable-item-row.scss
@@ -13,6 +13,12 @@
   cursor: -webkit-grabbing;
 }
 
+.configurable-item-row--dragged {
+  .configurable-item-row__content-wrapper {
+    visibility: hidden;
+  }
+}
+
 .configurable-item-row__content-wrapper {
   align-items: center;
   display: flex;
@@ -22,3 +28,15 @@
 .configurable-item-row__icon {
   cursor: move;
 }
+
+.custom-drag-layer {
+  .configurable-item-row {
+    background-color: $grey-light;
+    border: none;
+
+    .configurable-item-row__content-wrapper {
+      visibility: visible;
+    }
+  }
+}
+
