Add the draggable ghost row to the table row

--- a/src/components/table/table-row/table-row.scss
+++ b/src/components/table/table-row/table-row.scss
@@ -56,3 +56,26 @@
 .carbon-table-row--dragging {
   @include disable-text-selection;
 }
+
+.carbon-table-row--dragged {
+  border-bottom: 1px solid $table-border-color;
+
+  .carbon-table-cell {
+    visibility: hidden;
+  }
+}
+
+.custom-drag-layer {
+  .carbon-table-row {
+    background-color: $grey-light;
+    display: block;
+
+    .carbon-table-cell {
+      background-color: $grey-light;
+    }
+
+    .configurable-item-row__content-wrapper {
+      visibility: visible;
+    }
+  }
+}
