--- a/src/components/drag-and-drop/custom-drag-layer/custom-drag-layer.scss
+++ b/src/components/drag-and-drop/custom-drag-layer/custom-drag-layer.scss
@@ -6,7 +6,7 @@
   opacity: 0.7;
   padding: 0;
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 100;
